<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>org.minitestlang</groupId>
    <artifactId>minitestlang</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>minitestlang</name>
    <url>http://maven.apache.org</url>

    <modules>
        <module>parser</module>
        <module>interpreter</module>
        <module>llvm</module>
        <module>core</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <java.version>21</java.version>
        <antlr4.version>4.13.1</antlr4.version>
        <junit.version>5.10.1</junit.version>
    </properties>

    <dependencyManagement>

        <dependencies>
            <dependency>
                <groupId>org.minitestlang</groupId>
                <artifactId>parser</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.minitestlang</groupId>
                <artifactId>interpreter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.minitestlang</groupId>
                <artifactId>llvm</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.minitestlang</groupId>
                <artifactId>core</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>

    </dependencyManagement>

<!--    <build>-->
<!--        <plugins>-->
<!--            <plugin>-->
<!--                <groupId>org.springframework.boot</groupId>-->
<!--                <artifactId>spring-boot-maven-plugin</artifactId>-->
<!--            </plugin>-->
<!--            <plugin>-->
<!--                <groupId>org.antlr</groupId>-->
<!--                <artifactId>antlr4-maven-plugin</artifactId>-->
<!--                <version>${antlr4.version}</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <goals>-->
<!--                            <goal>antlr4</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->

<!--        </plugins>-->
<!--    </build>-->

    <dependencies>

        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>${antlr4.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>
</project>